--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -260,6 +260,8 @@
   <script src="features/students/records.controller.js"></script>
   <!-- Student Dashboard -->
   <script src="features/student-dashboard/student-dashboard.controller.js"></script>
+  <!-- Student Applicant Viewer -->
+  <script src="features/student/applicant-viewer/student-applicant-viewer.controller.js"></script>
   <!-- Admissions application feature -->
   <script src="features/admissions/apply.controller.js"></script>
   <script src="features/admissions/success.controller.js"></script>
