--- a/frontend/unity-spa/features/registrar/enlistment/enlistment.html
+++ b/frontend/unity-spa/features/registrar/enlistment/enlistment.html
@@ -64,7 +64,7 @@
   <!-- Current enlisted -->
   <div class="bg-white border rounded p-4">
     <div ng-if="vm.selectedStudentName" class="text-sm text-gray-700 mb-1 flex items-center justify-between">
-      <span>Student: <span class="font-semibold">{{vm.selectedStudentName}}</span></span>
+      <span>Student: <span class="font-semibold">{{vm.selectedStudentName}} - {{ vm.registration.enrollment_status }}</span></span>      
       <a ng-if="vm.studentNumber" 
          href="#/students/{{vm.student_id}}/records?sn={{vm.studentNumber}}" 
          target="_blank" 
@@ -78,7 +78,15 @@
         {{ vm.programLabel(vm.findProgramById(vm.regForm.current_program || (vm.registration && vm.registration.current_program) || vm.studentDefaultProgramId)) || '—' }}
       </span>
     </div>
-    <h2 class="text-lg font-semibold mb-3">Current Enlisted (Selected Term)</h2>
+    <div class="flex items-center justify-between mb-3">
+      <h2 class="text-lg font-semibold">Current Enlisted (Selected Term)</h2>
+      <button ng-if="vm.registration && (vm.registration.enrollment_status === 'enlisted' || vm.registration.enrollment_status === 'enrolled') && vm.studentNumber && vm.term"
+              class="px-3 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 disabled:opacity-50"
+              ng-click="vm.openRegFormPdf()" ng-disabled="vm.regPdfLoading">
+        <span ng-if="!vm.regPdfLoading"><i class="fas fa-file-pdf mr-1"></i> Generate Reg Form (PDF)</span>
+        <span ng-if="vm.regPdfLoading"><i class="fas fa-spinner fa-spin mr-1"></i> Generating...</span>
+      </button>
+    </div>
     <div ng-if="!vm.current.length" class="text-gray-500">No enlisted classes loaded.</div>
     <table ng-if="vm.current.length" class="min-w-full text-sm">
       <thead>
