--- a/frontend/unity-spa/features/subjects/edit.html
+++ b/frontend/unity-spa/features/subjects/edit.html
@@ -140,7 +140,7 @@
         </div>
       </div>
 
-      <hr class="my-4">
+      <!-- <hr class="my-4">
 
       <h3 class="text-md font-medium text-gray-800 mb-2">Legacy Equivalent/Prereq Slots</h3>
       <p class="text-xs text-gray-500 mb-3">These are legacy single-value slots; full prerequisites are managed below.</p>
@@ -158,7 +158,7 @@
           <label class="block text-sm font-medium text-gray-700 mb-1">Equivalent ID 2</label>
           <input type="number" class="w-full border rounded px-3 py-2" ng-model="vm.model.intEquivalentID2" min="0" placeholder="0">
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
