--- a/frontend/unity-spa/features/schedules/schedule-edit.html
+++ b/frontend/unity-spa/features/schedules/schedule-edit.html
@@ -62,6 +62,60 @@
           <p class="mt-1 text-sm text-gray-500">Unique identifier for this schedule entry</p>
         </div>
 
+        <!-- Academic Year -->
+        <div>
+          <label for="intSem" class="block text-sm font-medium text-gray-700 mb-2">
+            Academic Year <span class="text-red-500">*</span>
+          </label>
+          <select id="intSem"
+                  ng-model="vm.form.intSem" 
+                  ng-change="vm.onAcademicYearChange()"
+                  required
+                  class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            <option value="">Select academic year</option>
+            <option ng-repeat="ay in vm.academicYears" value="{{ ay.intID }}">
+              {{ ay.enumSem }} Term SY {{ ay.strYearStart }}-{{ ay.strYearEnd }}
+            </option>
+          </select>
+        </div>
+
+        <!-- Block Section -->
+        <div>
+          <label for="blockSectionID" class="block text-sm font-medium text-gray-700 mb-2">
+            Block Section <span class="text-red-500">*</span>
+          </label>
+          <select id="blockSectionID"
+                  ng-model="vm.form.blockSectionID" 
+                  ng-change="vm.onBlockSectionChange()"
+                  ng-disabled="!vm.form.intSem"
+                  required
+                  class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            <option value="">Select a block section</option>
+            <option ng-repeat="section in vm.blockSections" value="{{ section.intID }}">
+              {{ section.displayName }}
+            </option>
+          </select>
+          <p class="mt-1 text-sm text-gray-500">Choose the block section for this schedule</p>
+        </div>
+
+        <!-- Classlist -->
+        <div>
+          <label for="intClasslistID" class="block text-sm font-medium text-gray-700 mb-2">
+            Classlist <span class="text-red-500">*</span>
+          </label>
+          <select id="intClasslistID"
+                  ng-model="vm.form.intClasslistID" 
+                  ng-disabled="!vm.form.intSem || vm.loadingClasslists"
+                  required
+                  class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            <option value="">{{ vm.loadingClasslists ? 'Loading classlists...' : 'Select a classlist' }}</option>
+            <option ng-repeat="classlist in vm.availableClasslists" value="{{ classlist.intID }}">
+              {{ vm.getClasslistLabel(classlist) }} - {{ vm.getFacultyName(classlist.faculty) }}
+            </option>
+          </select>
+          <p class="mt-1 text-sm text-gray-500">Only classlists without schedules are shown</p>
+        </div>
+
         <!-- Classroom -->
         <div>
           <label for="intRoomID" class="block text-sm font-medium text-gray-700 mb-2">
@@ -147,22 +201,6 @@
             <option ng-repeat="type in vm.classTypes" value="{{ type.value }}">
               {{ type.label }}
             </option>
-          </select>
-        </div>
-
-        <!-- Semester -->
-        <div>
-          <label for="intSem" class="block text-sm font-medium text-gray-700 mb-2">
-            Semester <span class="text-red-500">*</span>
-          </label>
-          <select id="intSem"
-                  ng-model="vm.form.intSem" 
-                  required
-                  class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-            <option value="">Select semester</option>
-            <option value="1">1st Semester</option>
-            <option value="2">2nd Semester</option>
-            <option value="3">Summer</option>
           </select>
         </div>
       </div>
