--- a/frontend/unity-spa/features/finance/cashier-viewer/cashier-viewer.html
+++ b/frontend/unity-spa/features/finance/cashier-viewer/cashier-viewer.html
@@ -719,7 +719,7 @@
     </div>
 
     <!-- Reservation Fee (Applicants) -->
-    <!-- <div class="mt-4" ng-if="vm.canShowGenerateReservationFee()">
+    <div class="mt-4" ng-if="vm.canShowGenerateReservationFee()">
       <div class="rounded border border-amber-200 bg-amber-50 text-amber-800 px-4 py-3 mb-2">
         Reservation fee billing and invoice not found for this term.
       </div>
@@ -733,7 +733,7 @@
         <span ng-if="!vm.generatingResFee">Generate Reservation Fee</span>
         <span ng-if="vm.generatingResFee">Generating...</span>
       </button>
-    </div> -->
+    </div>
 
     <!-- Invoices -->
     <div class="mt-6">
