--- a/frontend/unity-spa/features/subjects/list.html
+++ b/frontend/unity-spa/features/subjects/list.html
@@ -1,9 +1,20 @@
 <div class="p-6">
   <div class="flex items-center justify-between mb-4">
     <h1 class="text-xl font-semibold text-gray-800">Subjects</h1>
-    <button class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
-            ng-click="vm.add()">Add Subject</button>
+    <div class="space-x-2">
+      <button class="px-3 py-2 border border-gray-300 rounded bg-white text-sm hover:bg-gray-50"
+              ng-click="vm.downloadTemplate()">
+        <i class="fas fa-download mr-1"></i> Download Template
+      </button>
+      <button class="px-3 py-2 border border-gray-300 rounded bg-white text-sm hover:bg-gray-50"
+              ng-click="vm.openImportDialog()">
+        <i class="fas fa-file-import mr-1"></i> Import
+      </button>
+      <button class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
+              ng-click="vm.add()">Add Subject</button>
+    </div>
   </div>
+  <input id="subjectsImportFile" type="file" accept=".xlsx,.xls,.csv" style="display:none" />
 
   <div class="bg-white border rounded p-4 mb-4">
     <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
@@ -45,6 +56,35 @@
               ng-disabled="vm.loading">
         Search
       </button>
+    </div>
+  </div>
+
+  <div class="mb-4" ng-if="vm.importing || vm.importError || vm.importSummary">
+    <div class="p-3 border rounded"
+         ng-class="vm.importError ? 'border-red-300 bg-red-50 text-red-700' : 'border-green-300 bg-green-50 text-green-700'">
+      <div ng-if="vm.importing">
+        <i class="fas fa-spinner fa-spin mr-2"></i> Importing...
+      </div>
+      <div ng-if="vm.importError">
+        <i class="fas fa-exclamation-triangle mr-1"></i>{{ vm.importError }}
+      </div>
+      <div ng-if="vm.importSummary">
+        <div class="font-semibold mb-1">Import Summary</div>
+        <div class="text-sm">
+          Total: {{ vm.importSummary.totalRows }} •
+          Inserted: {{ vm.importSummary.inserted }} •
+          Updated: {{ vm.importSummary.updated }} •
+          Skipped: {{ vm.importSummary.skipped }}
+        </div>
+        <div class="mt-2" ng-if="vm.importSummary.errors && vm.importSummary.errors.length">
+          <div class="text-sm font-medium mb-1">Errors:</div>
+          <ul class="list-disc pl-6 text-sm">
+            <li ng-repeat="e in vm.importSummary.errors track by $index">
+              Line {{ e.line }} <span ng-if="e.code">[{{ e.code }}]</span>: {{ e.message }}
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
