--- a/frontend/unity-spa/features/classlists/list.html
+++ b/frontend/unity-spa/features/classlists/list.html
@@ -3,6 +3,14 @@
   <div class="flex items-center justify-between">
     <h1 class="text-2xl font-semibold text-gray-800">Classlists</h1>
     <div class="flex items-center space-x-2">
+      <button class="inline-flex items-center px-3 py-2 rounded border border-gray-300 bg-white text-gray-800 hover:bg-gray-50"
+              ng-click="vm.downloadTemplate()">
+        <span class="fas fa-download mr-2"></span> Download Template
+      </button>
+      <button class="inline-flex items-center px-3 py-2 rounded border border-gray-300 bg-white text-gray-800 hover:bg-gray-50"
+              ng-click="vm.openImportDialog()">
+        <span class="fas fa-file-import mr-2"></span> Import
+      </button>
       <button class="inline-flex items-center px-3 py-2 rounded bg-blue-600 text-white hover:bg-blue-700"
               ng-click="vm.goAdd()">
         <span class="fas fa-plus mr-2"></span> Add Classlist
@@ -11,6 +19,39 @@
         <input type="checkbox" class="mr-2" ng-model="vm.includeDissolved" ng-change="vm.reload()">
         Include dissolved
       </label>
+    </div>
+  </div>
+
+  <!-- Hidden file input for Import -->
+  <input id="classlistsImportFile" type="file" accept=".xlsx,.xls,.csv" style="display:none" />
+
+  <!-- Import Alerts/Summary -->
+  <div class="mt-4" ng-if="vm.importing || vm.importError || vm.importSummary">
+    <div class="p-3 border rounded"
+         ng-class="vm.importError ? 'border-red-300 bg-red-50 text-red-700' : 'border-green-300 bg-green-50 text-green-700'">
+      <div ng-if="vm.importing">
+        <i class="fas fa-spinner fa-spin mr-2"></i> Importing...
+      </div>
+      <div ng-if="vm.importError">
+        <i class="fas fa-exclamation-triangle mr-1"></i>{{ vm.importError }}
+      </div>
+      <div ng-if="vm.importSummary">
+        <div class="font-semibold mb-1">Import Summary</div>
+        <div class="text-sm">
+          Total: {{ vm.importSummary.totalRows }} •
+          Inserted: {{ vm.importSummary.inserted }} •
+          Updated: {{ vm.importSummary.updated }} •
+          Skipped: {{ vm.importSummary.skipped }}
+        </div>
+        <div class="mt-2" ng-if="vm.importSummary.errors && vm.importSummary.errors.length">
+          <div class="text-sm font-medium mb-1">Errors:</div>
+          <ul class="list-disc pl-6 text-sm">
+            <li ng-repeat="e in vm.importSummary.errors track by $index">
+              Line {{ e.line }} <span ng-if="e.code">[{{ e.code }}]</span>: {{ e.message }}
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
